<resources>
    <string name="app_name">Android Assignment</string>
    <string name="invalid_number">Please enter a valid index number</string>
</resources>